<resources>
    <string name="app_name">Notes</string>
    <string name="create_your_first_note">Create your first Note!</string>
    <string name="search_button">Search note</string>
    <string name="get_info_button">Get info</string>
    <string name="add_note_button">Add note</string>
    <string name="back">Back</string>
    <string name="preview">Preview</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="type_something">Type something…</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="popup_text">Designed by - Divya Kelaskar\nRedesigned by - Maxim Vasilev\nIllustrations - i don`t know \nIcons - i don`t know\nFont - Google</string>
    <string name="made_by">Made by Maxim Vasilev with love</string>
    <string name="note_not_found">Note not found. Try searching again.</string>
    <string name="search_by_keyword">Search by the keyword…</string>
    <string name="discard">Discard</string>
    <string name="save_changes">Save changes?</string>
    <string name="info">Info</string>
</resources>