<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:orientation="vertical"
    tools:context=".presentation.note_edit.NoteEditFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main"
        android:paddingBottom="@dimen/appbar_padding_bottom"
        app:elevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/toolbar_margin_top"
            android:paddingHorizontal="@dimen/toolbar_padding_horizontal"
            android:paddingVertical="@dimen/toolbar_title_padding_vertical">

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_button_ripple"
                android:contentDescription="@string/back"
                android:padding="@dimen/toolbar_menu_button_padding"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/button_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/toolbar_first_button_margin_end"
                android:background="@drawable/menu_button_ripple"
                android:contentDescription="@string/preview"
                android:padding="@dimen/toolbar_menu_button_padding"
                android:src="@drawable/ic_preview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_save"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_button_ripple"
                android:contentDescription="@string/save"
                android:padding="@dimen/toolbar_menu_button_padding"
                android:src="@drawable/ic_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/button_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_button_ripple"
                android:contentDescription="@string/edit"
                android:padding="@dimen/toolbar_menu_button_padding"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/appbar_padding_bottom"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/edit_text_margin_horizontal"
                android:background="@null"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/title"
                android:maxLength="60"
                android:textColor="@color/white"
                android:textColorHint="@color/hint"
                android:textSize="@dimen/edit_text_title_size" />

            <EditText
                android:id="@+id/edit_text_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/edit_text_margin_horizontal"
                android:layout_marginTop="@dimen/edit_text_content_margin_top"
                android:background="@null"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/type_something"
                android:textColor="@color/white"
                android:textColorHint="@color/hint"
                android:textSize="@dimen/edit_text_content_size" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>